# instance_loader

./: README.md  pyproject.toml
instance_loader/: dataset.py
instance_loader.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: Manual_test.py  no_download_test.py  test_singular_file.py
