[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "instance_loader"
version = "1.0.0"
description = "DIMACS graph-coloring dataset loader using PyTorch, grabbing .col.gz files"
authors = [
  {name = "Frederik M. Dam", email = "Fdam39@gmail.com"}
]
readme = "README.md"
license = {text = "GNU"}
requires-python = ">=3.7"
dependencies = ["torch>=1.8", "torchvision>=0.9"]